--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -9,5 +9,68 @@
     width: 95vw;
     height: 95vh;
     image-rendering: pixelated;
-    background-color: rgb(32, 32, 32);
+    background-color: var(--background-color);
+}
+
+::ng-deep .tooltip-toggle-control {
+    background-color: none;
+    border: none !important;
+    padding: 5px;
+
+    button {
+        margin: 2px;
+        color: black;
+        font-size: 0.75em;
+    }
+}
+
+::ng-deep .custom-control {
+    background-color: none;
+    border: none !important;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+
+    button {
+        margin: 2px;
+
+        img {
+            height: 1.5em;
+            width: auto;
+        }
+    }
+}
+
+::ng-deep .histogram-panel {
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    padding: 10px;
+    width: 200px;
+    height: 100px;
+    overflow: hidden;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+
+    #histogram-container {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+::ng-deep .feature-tooltip {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family: var(--font-family);
+    border-radius: 5px;
+    margin-bottom: 0.5em;
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+::ng-deep .tooltip-image {
+    height: 1.5em;
+    width: auto;
+    margin-left: 0.5em;
 }
