--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-html, body {
-    font-family: 'Inconsolata', monospace;
+
+:root {
+    --background-color: rgb(32, 32, 32);
+    --lighter-background-color: rgb(37, 37, 37);
+    --text-color: rgba(255, 255, 255, 0.9);
+    /*--text-color: rgb(220, 220, 157);*/
+    --border-color: var(--text-color);
+    --faded-border-color: rgba(255, 255, 255, 0.2);
+    --faded-text-color: rgba(255, 255, 255, 0.5);
+    /*--font-family: 'Titillium Web', sans-serif;*/
+    --hacker-font: 'Inconsolata', monospace;
+    /*--font-family: "Delius", cursive;*/
+    --font-family: "Manrope", sans-serif;
+    --void-color: rgb(20, 20, 20);
+}
+
+.light-mode {
+    --background-color: rgb(255, 255, 255);
+    --lighter-background-color: rgb(240, 240, 240);
+    --text-color: rgb(0, 0, 0);
+    --border-color: var(--text-color);
+    --faded-border-color: rgba(0, 0, 0, 0.2);
+    --faded-text-color: rgba(0, 0, 0, 0.5);
+    --hacker-font: 'Inconsolata', monospace;
+    --font-family: 'Titillium Web', sans-serif;
+    --void-color: rgb(240, 240, 240);
+}
+
+html,
+body {
+    font-family: var(--font-family);
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+    user-select: none;
+}
+
+.tooltip {
+    background: #222 !important;
+    color: #fff !important;
+    font-size: 1.1em !important;
+    border-radius: 6px !important;
+    padding: 0.5em 1em !important;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
+}
+
+.tooltip-secret {
+    background: var(--background-color) !important;
+    color: var(--text-color) !important;
+    border-radius: 6px !important;
+    padding: 0.5em 0.5em 0.5em 0em !important;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
+    width: fit-content !important;
+    max-width: 90vw !important;
+    white-space: pre !important;
+    word-break: normal !important;
+    font-family: Inconsolata, monospace !important;
 }
