fixed scrolling issue

--- a/src/app/save-view-splash/save-view-splash.component.html
+++ b/src/app/save-view-splash/save-view-splash.component.html
@@ -1,7 +1,11 @@
-
 <div #chute *ngIf="!hasBeenInitialized" class="chute" (drop)="onDrop($event)" (dragover)="onDragOver($event)"
 (dragleave)="onDragLeave($event)" >
     <span>Drag and drop a (plain text) Victoria 3 save file here to start</span>
+    <span>or</span>
+    <div class="file-selection">
+        <button mat-raised-button class="select-file-button" color="primary" style="text-decoration: underline;" (click)="openFileDialog()">Select a save file</button>
+        <input #fileInput type="file" accept=".v3,.json" style="display: none;" (change)="onFileSelected($event)" />
+    </div>
 </div>
 <app-save-view
   *ngIf="hasBeenInitialized"
