--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-<mat-toolbar>
-    <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <span>PDX</span>
-</mat-toolbar>
-
-<mat-drawer-container class="container" autosize>
-  <mat-drawer #drawer class="sidenav" mode="side">
-    <ng-container *ngFor="let action of sideNavContentProvider.getActions()">
-      <button matButton (click)="action.action()">{{ action.label }}</button>
-    </ng-container>
-  </mat-drawer>
-
-  <app-save-view-splash></app-save-view-splash>
-
-</mat-drawer-container>
+<app-paradox></app-paradox>
