--- a/src/app/save-view-splash/save-view-splash.component.scss
+++ b/src/app/save-view-splash/save-view-splash.component.scss
@@ -1,8 +1,6 @@
 :host {
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    overflow-y: auto;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -29,4 +27,18 @@
 .chute-active {
     background-color: var(--background-color);
     box-shadow: 0 0 10px var(--text-color) inset, 0 0 10px var(--text-color);
+}
+
+.select-file-button {
+    padding: 0.75em;
+    border-radius: 5px;
+    transition: transform 0.5s ease;
+
+    &:hover {
+        background-color: var(--faded-border-color) !important;
+    }
+
+    &:active {
+        transform: translateY(20px);
+    }
 }
