--- a/src/app/save-view/save-view.component.scss
+++ b/src/app/save-view/save-view.component.scss
@@ -5,44 +5,25 @@
     --mat-sys-title-small-size: 2em;
     --mat-sys-title-small-font: var(--font-family);
     --mat-sys-primary: var(--text-color);
-
-
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
     max-height: 100%;
-    height: 100%;
-    width: 100%;
-    overflow-y: auto;
 
-    @include mat.tabs-overrides((
-        divider-color: var(--text-color),
-        active-label-text-color: var(--text-color),
-        active-focus-label-text-color: var(--text-color),
-        inactive-focus-label-text-color: var(--text-color),
-        inactive-label-text-color: var(--text-color),
-        label-text-size: 2em,
-        container-height: 2.5em,
-        label-text-font: var(--font-family),
-        divider-height: 1px,
-        active-indicator-height: 0.2em,
-  ));
-}
-
-.mat-mdc-tab-group {
-    width: 100%;
-    height: 100%;
-}
-
-:host ::ng-deep .mat-mdc-tab-body-wrapper {
-    padding-top: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-bottom: 2rem;
-    background-color: var(--void-color);
-    display: flex;
-    height: 100%;
+    @include mat.tabs-overrides((divider-color: var(--text-color),
+            active-label-text-color: var(--text-color),
+            active-focus-label-text-color: var(--text-color),
+            inactive-focus-label-text-color: var(--text-color),
+            inactive-label-text-color: var(--text-color),
+            label-text-size: 2em,
+            container-height: 2em,
+            label-text-font: var(--font-family),
+            divider-height: 1px,
+            active-indicator-height: 0.2em,
+        ));
 }
 
 .table-controls {
@@ -65,4 +46,34 @@
     color: var(--text-color);
     font-family: var(--font-family);
     font-size: var(--font-size);
+}
+
+::ng-deep mat-tab-group {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    min-height: 0;
+    background-color: var(--background-color);
+}
+
+::ng-deep .mat-mdc-tab-body-wrapper {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+::ng-deep .mat-mdc-tab-body {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+::ng-deep .mat-mdc-tab-body-content {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    background: var(--void-color);
 }
