--- a/src/app/vic3-country-table/vic3-country-table.component.scss
+++ b/src/app/vic3-country-table/vic3-country-table.component.scss
@@ -3,9 +3,12 @@
 :host {
     display: flex;
     flex-direction: column;
+    flex: 1;
     box-sizing: border-box;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    padding: 3em 5em;
+    max-height: 100%;
     @include mat.table-overrides((row-item-container-height: 3em,
             row-item-label-text-size: 1em,
             header-container-height: 2.2em,
@@ -16,98 +19,20 @@
         ));
 }
 
-.table-scroll-wrapper {
-    width: 100%;
-    max-width: 100%;
-    max-height: 50%;
-    overflow-x: auto;
-    overflow-y: auto;
-    box-sizing: border-box;
-    margin: 1em 0;
-    border: 1px solid var(--faded-border-color);
-    border-radius: 1em;
-    background-color: var(--background-color);
-}
-
 table {
-    min-width: max-content;
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-}
-
-td {
-    z-index: 2;
-}
-
-table th:first-child,
-table th:nth-child(2),
-table th:nth-child(3) {
-    z-index: 20;
-}
-
-td:first-child,
-td:nth-child(2),
-td:nth-child(3) {
-    text-align: center;
-    z-index: 2;
-}
-
-th:first-child,
-td:first-child,
-th:nth-child(2),
-td:nth-child(2),
-th:nth-child(3),
-td:nth-child(3) {
-    position: sticky;
-    text-wrap: nowrap;
-    text-overflow: ellipsis;
-    background: var(--background-color);
-}
-
-th:first-child,
-td:first-child {
-    width: 3rem;
-    min-width: 3rem;
-    max-width: 3rem;
-    left: 0;
-    color: var(--faded-border-color);
-}
-
-td:nth-child(2),
-th:nth-child(2) {
-    width: 13rem;
-    min-width: 13rem;
-    max-width: 13rem;
-    left: 3rem;
-}
-
-td:nth-child(3),
-th:nth-child(3) {
-    width: 10rem;
-    min-width: 10rem;
-    max-width: 10rem;
-    left: 16rem;
-    border-right: 1px solid var(--faded-border-color);
-}
-
-td,
-th {
-    color: var(--font-color);
-    user-select: none;
-    box-sizing: border-box;
+    border: 1px solid var(--faded-border-color);
 }
 
 table th {
     font-weight: bold;
     position: sticky;
     top: 0;
-    z-index: 10;
     background-color: var(--background-color);
 }
 
 table td {
     background-color: var(--background-color);
+    padding: 0.5em;
 }
 
 .negative-cell {
@@ -115,5 +40,5 @@ table td {
 }
 
 sub {
-  font-size: 0.5em;
+    font-size: 0.5em;
 }
