added discord auth

--- a/src/app/paradox/paradox.component.html
+++ b/src/app/paradox/paradox.component.html
@@ -14,7 +14,8 @@
                     <mat-icon>wb_sunny</mat-icon>
                 </button>
                 <button mat-icon-button (click)="setTheme(true); toggleAnimation('night')"
-                    class="theme-button night-button" [class.sink]="currentTheme === 'night'" [class.hover-effect]="true">
+                    class="theme-button night-button" [class.sink]="currentTheme === 'night'"
+                    [class.hover-effect]="true">
                     <mat-icon>nightlight</mat-icon>
                 </button>
             </div>
