--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -3,12 +3,15 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    background-color: var(--background-color);
+    height: 100%;
 }
 
 .map-container {
-    width: 95vw;
-    height: 95vh;
+    width: 90vw;
+    height: 90vh;
     image-rendering: pixelated;
+    border: 1px solid var(--border-color);
     background-color: var(--background-color);
 }
 
