--- a/src/app/plot-view/plot-view.component.scss
+++ b/src/app/plot-view/plot-view.component.scss
@@ -3,5 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*background-color: var(--background-color);*/
+    background-color: var(--background-color);
+    padding: 4em;
 }
