--- a/src/app/save-view/save-view.component.scss
+++ b/src/app/save-view/save-view.component.scss
@@ -15,65 +15,66 @@
 
     @include mat.tabs-overrides((divider-color: var(--text-color),
             active-label-text-color: var(--text-color),
-            active-focus-label-text-color: var(--text-color),
-            inactive-focus-label-text-color: var(--text-color),
             inactive-label-text-color: var(--text-color),
             label-text-size: 2em,
-            container-height: 2em,
             label-text-font: var(--font-family),
+            container-height: 2em,
             divider-height: 1px,
             active-indicator-height: 0.2em,
         ));
 }
 
+.content {
+    width: 100%;
+    color: var(--text-color);
+    background-color: var(--background-color);
+    padding: 0.25em 0em 0.25em 4em;
+}
+
+.content span:nth-child(odd) {
+    margin-right: 0.5em;
+    font-variant-numeric: tabular-nums;
+}
+
+.content span:nth-child(even) {
+    margin-right: 2em;
+    font-variant-numeric: tabular-nums;
+}
+
 .table-controls {
     width: 50%;
+    margin: 0 auto 0.5em;
+    padding: 0.5em 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0.5em;
-    padding: 0.5em 0;
-    margin: 0 auto;
-    box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.5);
     border-radius: 1em;
     background-color: var(--background-color);
-
 }
 
 .radio-group-label {
     display: block;
     color: var(--text-color);
-    font-family: var(--font-family);
-    font-size: var(--font-size);
+    font: var(--font-size) var(--font-family);
 }
 
-::ng-deep mat-tab-group {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    min-height: 0;
-    background-color: var(--background-color);
-}
-
-::ng-deep .mat-mdc-tab-body-wrapper {
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
-}
-
-::ng-deep .mat-mdc-tab-body {
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
-
+::ng-deep mat-tab-group,
+::ng-deep .mat-mdc-tab-body-wrapper,
+::ng-deep .mat-mdc-tab-body,
 ::ng-deep .mat-mdc-tab-body-content {
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
+    min-height: 0;
+}
+
+::ng-deep mat-tab-group {
+    background-color: var(--background-color);
+}
+
+::ng-deep .mat-mdc-tab-body-content {
     overflow: auto;
     background: var(--void-color);
 }
