--- a/src/app/vic3-country-table/vic3-country-table.component.html
+++ b/src/app/vic3-country-table/vic3-country-table.component.html
@@ -1,7 +1,8 @@
 <table mat-table [dataSource]="dataSource" matSort>
     <ng-container *ngFor="let col of columns; let index = index" [matColumnDef]="col.def" [sticky]="index < 3">
         <th mat-header-cell *matHeaderCellDef [mat-sort-header]="col.sortable ? col.def : ''"
-            [matTooltip]="col.tooltip" matTooltipClass="tooltip">
+            [matTooltip]="col.tooltip" matTooltipClass="tooltip" [cdkContextMenuTriggerFor]="headermenu"
+            (cdkContextMenuOpened)="selectedColumn = col">
             {{col.header}}
         </th>
         <td mat-cell *matCellDef="let element; let i = index"
@@ -20,3 +21,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<ng-template #headermenu>
+  <div class="col-context-menu" cdkMenu>
+    <button class="col-context-menu-item" cdkMenuItem (click)="openPlot()">📊 Plot</button>
+  </div>
+</ng-template>
