--- a/src/app/vic3-country-table/vic3-country-table.component.scss
+++ b/src/app/vic3-country-table/vic3-country-table.component.scss
@@ -16,6 +16,12 @@
             row-item-outline-color: var(--faded-border-color),
             row-item-label-text-color: var(--text-color),
             row-item-outline-width: 1px,
+            header-headline-color: var(--text-color),
+            header-headline-font: var(--font-family) var(--font-weight-bold),
+            row-item-label-text-font: var(--font-family) var(--font-weight-regular)
+        ));
+    @include mat.dialog-overrides((container-color: orange,
+            subhead-color: red,
         ));
 }
 
@@ -41,4 +47,38 @@ table td {
 
 sub {
     font-size: 0.5em;
+}
+
+.col-context-menu {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+    border-radius: 0.5em;
+    background-color: var(--void-color);
+    padding: 0.25em;
+    border: 1px solid var(--faded-border-color);
+    border-radius: 0.5em;
+}
+
+.col-context-menu-item {
+    font-size: 1.2em;
+    padding: 0.5em 1em;
+    color: var(--text-color);
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25em;
+    cursor: pointer;
+    border-color: var(--faded-border-color);
+    background-color: var(--background-color);
+}
+
+.col-context-menu-item:hover {
+    background-color: var(--faded-border-color);
+    border-color: var(--text-color);
+}
+
+.col-context-menu-item:active {
+    filter: brightness(0.5);
+}
+
+.popup {
+    background: none;
 }
