--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 :root {
     --background-color: rgb(32, 32, 32);
@@ -46,6 +46,8 @@ body {
     width: 100%;
     height: 100%;
     user-select: none;
+    display: flex;
+    flex-direction: column;
 }
 
 .tooltip {
