--- a/src/app/viewers/polygon-select/polygon-select.component.scss
+++ b/src/app/viewers/polygon-select/polygon-select.component.scss
@@ -1,4 +1,5 @@
 :host {
+    display: block;
     width: 100%;
     height: 100%;
 }
@@ -7,6 +8,38 @@
     width: 100%;
     height: 100%;
     position: relative;
+    background-color: black;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    box-sizing: border-box;
+
+    canvas {
+        display: block;
+        width: 100% !important;
+        height: 100% !important;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+
+.loading-indicator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    z-index: 999;
+    
+    p {
+        margin: 0;
+        font-size: 16px;
+        color: #666;
+        font-weight: 500;
+    }
 }
 
 .button-group {
