--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -40,7 +40,7 @@ html {
     --mat-sys-on-secondary-container: var(--text-color);
     
     --mat-sys-outline: var(--border-color);
-    --mat-sys-primary: var(--text-color);
+    --mat-sys-primary: rgb(0, 180, 0); // was text color
 
     --box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     --box-shadow-small: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
